--- a/app/css/main.css
+++ b/app/css/main.css
@@ -265,19 +265,25 @@ body{
 	width: 650px;
 	border-radius: 4px;
 	overflow: hidden;
-	padding-bottom: 46px;
-	margin-bottom: 26px;
+	padding-bottom: 35px;
+	margin-bottom: 27px;
 	background-color: #eff3f7;
 }
 .about-me__title{
 	display: inline-block;
 	font-size: 1.7em;
 	color: #3ba8c0;
-  line-height: 68px;
+  line-height: 66px;
   border-bottom: 2px solid #3ba8c0;
   margin-top: 0;
   margin-bottom: 21px;
   padding: 0 21px;
+}
+.last-teach{
+	padding-bottom: 12px;
+}
+.last{
+	margin-bottom: 40px;
 }
 .about-me-img{
 	float: left;
@@ -300,7 +306,7 @@ body{
 	padding: 0;
 }
 .about-me-info-list__item{
-	margin-bottom: 12px;
+	margin-bottom: 10px;
 	list-style: none;
 	width: 410px;
 	float: right;
@@ -327,7 +333,7 @@ body{
   font-size: 0.8em;
   font-family: 'proxima_novasemibold';
   padding: 0 14px;
-  margin: 0 2px 5px 0;
+  margin: 5px 2px 5px 0;
   border-radius: 2px;
   line-height: 19px;
   /* ie-8 градиент */
