--- a/app/css/my-works.css
+++ b/app/css/my-works.css
@@ -6,7 +6,6 @@
 	padding-bottom: 35px;
 	margin-bottom: 40px;
 	background-color: #eff3f7;
-	z-index: 100;
 }
 .galery__title{
 	display: inline-block;
@@ -233,9 +232,32 @@
 	margin: 2px auto -2px;
 	box-shadow: none;
 }
-
+.popup__close{
+	position: absolute;
+	width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  border:2px solid #fff;
+  font-size: 1.4em;
+  top:10px;
+  right: 10px;
+  color:#fff;
+  text-align: center;
+  box-sizing:border-box;
+  text-decoration: none;
+}
 input::-webkit-input-placeholder { color: #48cbe8;}
 input::-moz-placeholder { color: #48cbe8;}
 textarea::-moz-placeholder { color: #48cbe8;}
 textarea::-webkit-input-placeholder { color: #48cbe8;}
 
+.close {
+  border-radius: 50%;
+  background-color: rgb( 255, 255, 255 );
+  position: absolute;
+  left: 844px;
+  top: 325px;
+  width: 25px;
+  height: 25px;
+  z-index: 155;
+}
