--- a/app/css/login.css
+++ b/app/css/login.css
@@ -57,6 +57,7 @@
   width: 100%;
   box-sizing:border-box;
   height: 60px;
+  line-height: 60px;
   padding: 0 20px;
 }
 .submit{
@@ -70,6 +71,7 @@
   border: none;
   background: #48cbe8;
   box-shadow: 0 4px 0 #3ba8c0;
+  outline: none;
 }
 .auth__form-submit:hover{
   -webkit-transition: .3s;
@@ -77,7 +79,9 @@
   -ms-transition: .3s;
   -o-transition: .3s;
   transition: .3s;
-  
   box-shadow: none;
   margin: 4px 0 -4px;
+}
+.auth__form-submit:active{
+  background: #3ba8c0;
 }
