--- a/app/css/main.css
+++ b/app/css/main.css
@@ -343,3 +343,33 @@ input::-webkit-input-placeholder { color: #48cbe8;}
 input::-moz-placeholder { color: #48cbe8;}
 textarea::-moz-placeholder { color: #48cbe8;}
 textarea::-webkit-input-placeholder { color: #48cbe8;}
+
+.error-messege {
+  background: #fdd5d2;
+  border: 1px solid #f97e76;
+  color: #f97e76;
+}
+
+.success-messege {
+  background: #d4f7e9;
+  border: 1px solid #4cd49c;
+  color: #4cd49c;
+}
+
+.error {
+  background: #fdd5d2;
+  border: 1px solid #f97e76;
+}
+
+.success {
+  background: #d4f7e9;
+  border: 1px solid #4cd49c;
+}
+
+.qtip-mystyle {
+  background: #f97e76;
+  color: #fff;
+  font-family: fira_sansbook;
+  font-size: 0.8em;
+  border: 1px solid #f97e76;
+}
