--- a/app/css/my-works.css
+++ b/app/css/my-works.css
@@ -40,7 +40,7 @@
 	margin-bottom: 5px;
 }
 .galery__img-inner{
-	/*z-index: 1;*/
+	max-width: 100%;
 }
 .galery__img-link-wrap{
 	background: rgba(1, 108, 164, 0.6);
@@ -51,7 +51,6 @@
 	height: 100%;
 	opacity: 0;
 	filter: alpha(opacity=0);
-	/*z-index: 1;*/
 	-webkit-transition: .6s;
 	-moz-transition: .6s;
 	-ms-transition: .6s;
@@ -173,7 +172,6 @@
 	border-radius: 4px;
 	border:1px solid #48cbe8;
 	padding:10px;
-	line-height: 19px;
 	overflow: hidden;
 }
 .form__input-file{
@@ -193,6 +191,8 @@
 .form__input-fake {
   position: absolute;
   top: 0;
+  height: 36px;
+  line-height: 36px;
   bottom: 0;
   border:1px solid #48cbe8;
   border-radius: 4px;
