--- a/app/css/main.css
+++ b/app/css/main.css
@@ -77,8 +77,10 @@ body{
 	position: relative;
 	min-height: 100%;
 	min-width: 980px;
+  width: auto;
 	height: auto !important;
 }
+
 .wrapper:after{
 	content: "";
 	height: 80px;
@@ -104,7 +106,7 @@ body{
 .header .header__logo{
 	display:block;
 	position: absolute;
- 	top:37px;
+ 	top:15px;
 	left: 0;
 	transition:.5s;
 }
@@ -343,3 +345,5 @@ input::-webkit-input-placeholder { color: #48cbe8;}
 input::-moz-placeholder { color: #48cbe8;}
 textarea::-moz-placeholder { color: #48cbe8;}
 textarea::-webkit-input-placeholder { color: #48cbe8;}
+
+/*-- Медиа запросы --*/
